6871190: Don't terminate JVM if it is running in a non-interactive session

Don't handle CTRL_LOGOFF_EVENT event when the process is running in a non-interactive session

Reviewed-by: ctornqvi, acorn